<resources>
    <string name="app_name">Caranga Manager</string>
    <string name="txtApelidoVeiculo">Vehicle Nickname</string>
    <string name="txtKmCadVeiculo">Vehicle Rotated Km</string>
    <string name="txtDonoCadVeiculo">Vehicle owner</string>
    <string name="txtAnoCadVeiculo">Vehicle year</string>
    <string name="txtMontadoraCadVeiculo">Vehicle assembler</string>
    <string name="txtTipoCombustivelCadVeiculo">Vehicle fuel type</string>
    <string name="rbtGasolinaCadVeiculo">Gasoline</string>
    <string name="rbtDieselCadVeiculo">Diesel</string>
    <string name="rbtFlexCadVeiculo">Flex</string>
    <string name="txtAtivoCadVeiculo">Vehicle status</string>
    <string name="txAutoria">Authorship</string>
    <string name="txNomeAluno">Author: Pedro Henrique Wolf Brito</string>
    <string name="txCursoAluno">Course: Especialization - Java Technology</string>
    <string name="txEmailAluno">E-mail: phwolfbrito@gmail.com</string>
    <string name="txDescricaoSobreApp">The Caranga Manager application aims to help users register, view and have control over their vehicles\' expenses, helping in later decision making by the vehicle owner</string>
    <string name="txCampusSobre">Cornélio Procópio Campus</string>

    <string name="menuItemNovoPrincipal">New</string>
    <string name="menuItemSobrePrincipal">About</string>
    <string name="menuItemSalvarCadVeiculo">Save</string>
    <string name="menuItemLimparCadVeiculo">Clear</string>
    <string name="menuItemEditarContextual">Edit</string>
    <string name="menuItemExcluirContextual">Delete</string>

    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="titleAcitivityCadastroVeiculo">Inserting</string>
    <string name="titleAcitivityEditarVeiculo">Editing</string>
    <string name="messagePreenchaCampos">Fill in the fields</string>
    <string name="messageVeiculoSalvo">Saved Vehicle</string>
    <string name="chkCheckedTrue">Active</string>
    <string name="chkCheckedFalse">Inactive</string>
    <string name="menuItemConfiguracoes">Configurations</string>
    <string name="txtConfigChkStatus">Default Value of Vehicle Status</string>
    <string name="titleActivityGastos">Vehicle Spents</string>
    <string name="btFilter">Filter</string>
    <string name="editDtInicial">Initial Date</string>
    <string name="editDtFinal">Final Date</string>
    <string name="txtFilterDescript">Filter by inital and final date:</string>
    <string name="txtDescGastoCad">Spent Description</string>
    <string name="txtDtGastoCad">Spent Date</string>
    <string name="messageInvalidDates">Invalid Dates</string>
    <string name="txtSpentValueCadGasto">Spent Value</string>
    <string name="messageRemoverVeiculo">Removing the vehicle also removes all your expenses, are you sure?</string>
    <string name="positiveButton">Yes</string>
    <string name="negativeButton">No</string>
    <string name="titleConfig">Settings</string>
    <string name="messageRemoverGasto">Do you want to remove this spent?</string>

</resources>
