<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroActivity">

    <TextView
        android:id="@+id/txApelidoCadVCeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtApelidoVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/editTextApelidoCadVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txApelidoCadVCeiculo"
        app:layout_constraintVertical_bias="0.040"
        android:layout_marginHorizontal="15dp"/>

    <TextView
        android:id="@+id/txDonoCadVeciulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDonoCadVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextApelidoCadVeiculo"
        app:layout_constraintVertical_bias="0.090" />

    <EditText
        android:id="@+id/editTextDonoCadVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txDonoCadVeciulo"
        app:layout_constraintVertical_bias="0.040" />

    <TextView
        android:id="@+id/txKmCadVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtKmCadVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextDonoCadVeiculo"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/editTextKmCadVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txKmCadVeiculo"
        app:layout_constraintVertical_bias="0.055"
        android:inputType="numberSigned"/>

    <TextView
        android:id="@+id/txAnoCadVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAnoCadVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextKmCadVeiculo"
        app:layout_constraintVertical_bias="0.111" />

    <EditText
        android:id="@+id/editTextAnoCadVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txAnoCadVeiculo"
        app:layout_constraintVertical_bias="0.063"
        android:inputType="numberSigned"/>

    <TextView
        android:id="@+id/txMontadoraCadVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMontadoraCadVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextAnoCadVeiculo"
        app:layout_constraintVertical_bias="0.125" />

    <Spinner
        android:id="@+id/spinnerMontadoraCadVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txMontadoraCadVeiculo"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/txTipoCombustiveCadVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTipoCombustivelCadVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinnerMontadoraCadVeiculo"
        app:layout_constraintVertical_bias="0.090" />

    <RadioGroup
        android:id="@+id/rbtGroupCombustivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txTipoCombustiveCadVeiculo"
        app:layout_constraintVertical_bias="0.090" >

        <RadioButton
            android:id="@+id/radioButtonGasolinaCadVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtGasolinaCadVeiculo" />

        <RadioButton
            android:id="@+id/radioButtonDieselCadVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtDieselCadVeiculo" />

        <RadioButton
            android:id="@+id/radioButtonFlexCadVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtFlexCadVeiculo" />
    </RadioGroup>

    <TextView
        android:id="@+id/txStatusCadVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAtivoCadVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/rbtGroupCombustivel"
        app:layout_constraintVertical_bias="0.37" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Ativo"
        android:onClick="changeAtivo"
        android:id="@+id/checkboxAtivoCadVeiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txStatusCadVeiculo"
        app:layout_constraintVertical_bias="0.164" />


</androidx.constraintlayout.widget.ConstraintLayout>